corrected demo.html

--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
 <body>
     <script src="./bundle/swap.min.js"></script>
     <script>
-        new SwapUtility.default({ screvenId: "swap", appId: "64411e580b5a95672ebcd08d" })
+        new SwapUtility.default({ screenId: "swap", appId: "64411e580b5a5672ebcd08d" })
     </script>
 </body>
 
